--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,8 @@ LIST(APPEND LINK_LIBS
         ${Sophus_LIBRARIES}
         )
 
-ADD_EXECUTABLE(data_gen main/gener_alldata.cpp src/param.h src/param.cpp src/utilities.h src/utilities.cpp src/imu.h src/imu.cpp)
-TARGET_LINK_LIBRARIES(data_gen ${LINK_LIBS})
+ADD_EXECUTABLE(generate_all_data main/generate_all_data.cpp src/param.h src/param.cpp src/utilities.h src/utilities.cpp src/imu.h src/imu.cpp)
+TARGET_LINK_LIBRARIES(generate_all_data ${LINK_LIBS})
 
 ADD_EXECUTABLE(imu_data_simulation main/imu_data_simulation.cpp src/param.h src/param.cpp src/utilities.h src/utilities.cpp src/imu.h src/imu.cpp)
-TARGET_LINK_LIBRARIES(data_gen ${LINK_LIBS})
+TARGET_LINK_LIBRARIES(imu_data_simulation ${LINK_LIBS})
